tests/emitzig/Smoke.zig

extern fn lean_nat_big_succ(a: LeanObj) callconv(.c) LeanObj;
extern fn lean_nat_big_add(a1: LeanObj, a2: LeanObj) callconv(.c) LeanObj;
extern fn lean_nat_big_sub(a1: LeanObj, a2: LeanObj) callconv(.c) LeanObj;
extern fn lean_nat_overflow_mul(a1: usize, a2: usize) callconv(.c) LeanObj;
extern fn lean_nat_big_mul(a1: LeanObj, a2: LeanObj) callconv(.c) LeanObj;
extern fn lean_nat_big_div(a1: LeanObj, a2: LeanObj) callconv(.c) LeanObj;
extern fn lean_nat_big_mod(a1: LeanObj, a2: LeanObj) callconv(.c) LeanObj;
extern fn lean_nat_big_eq(a1: LeanObj, a2: LeanObj) callconv(.c) bool;
extern fn lean_nat_big_le(a1: LeanObj, a2: LeanObj) callconv(.c) bool;
extern fn lean_nat_big_lt(a1: LeanObj, a2: LeanObj) callconv(.c) bool;
extern fn lean_nat_pow(a1: LeanObj, a2: LeanObj) callconv(.c) LeanObj;
extern fn lean_cstr_to_nat(s: [*c]const u8) callconv(.c) LeanObj;
extern fn lean_big_uint64_to_nat(n: u64) callconv(.c) LeanObj;
extern fn lean_uint32_of_big_nat(a: LeanObj) callconv(.c) u32;
extern fn lean_uint64_of_big_nat(a: LeanObj) callconv(.c) u64;
inline fn lean_uint64_to_nat(n: u64) LeanObj {
    if (n <= LeanMaxSmallNat) {
        return lean_box(@as(usize, @intCast(n)));
    } else {
        return lean_big_uint64_to_nat(n);
    }
}
inline fn lean_nat_succ(a: LeanObj) LeanObj {
    if (lean_is_scalar(a)) {
        return lean_usize_to_nat(lean_unbox(a) +% @as(usize, 1));
    } else {
        return lean_nat_big_succ(a);
    }
}
inline fn lean_nat_add(a1: LeanObj, a2: LeanObj) LeanObj {
    if (lean_is_scalar(a1) and lean_is_scalar(a2)) {
        return lean_usize_to_nat(lean_unbox(a1) +% lean_unbox(a2));
    } else {
        return lean_nat_big_add(a1, a2);
    }
}
inline fn lean_nat_sub(a1: LeanObj, a2: LeanObj) LeanObj {
    if (lean_is_scalar(a1) and lean_is_scalar(a2)) {
        const n1 = lean_unbox(a1);
        const n2 = lean_unbox(a2);
        if (n1 < n2) {
            return lean_box(@as(usize, 0));
        } else {
            return lean_box(n1 - n2);
        }
    } else {
        return lean_nat_big_sub(a1, a2);
    }
}
inline fn lean_nat_mul(a1: LeanObj, a2: LeanObj) LeanObj {
    if (lean_is_scalar(a1) and lean_is_scalar(a2)) {
        const n1 = lean_unbox(a1);
        if (n1 == 0) {
            return a1;
        }
        const n2 = lean_unbox(a2);
        const r = n1 *% n2;
        if (r <= LeanMaxSmallNat and r / n1 == n2) {
            return lean_box(r);
        } else {
            return lean_nat_overflow_mul(n1, n2);
        }
    } else {
        return lean_nat_big_mul(a1, a2);
    }
}
inline fn lean_nat_div(a1: LeanObj, a2: LeanObj) LeanObj {
    if (lean_is_scalar(a1) and lean_is_scalar(a2)) {
        const n1 = lean_unbox(a1);
        const n2 = lean_unbox(a2);
        if (n2 == 0) {
            return lean_box(@as(usize, 0));
        } else {
            return lean_box(n1 / n2);
        }
    } else {
        return lean_nat_big_div(a1, a2);
    }
}
inline fn lean_nat_mod(a1: LeanObj, a2: LeanObj) LeanObj {
    if (lean_is_scalar(a1) and lean_is_scalar(a2)) {
        const n1 = lean_unbox(a1);
        const n2 = lean_unbox(a2);
        if (n2 == 0) {
            return lean_box(n1);
        } else {
            return lean_box(n1 % n2);
        }
    } else {
        return lean_nat_big_mod(a1, a2);
    }
}
inline fn lean_nat_eq(a1: LeanObj, a2: LeanObj) bool {
    if (lean_is_scalar(a1) and lean_is_scalar(a2)) {
        return a1 == a2;
    } else {
        return lean_nat_big_eq(a1, a2);
    }
}
inline fn lean_nat_dec_eq(a1: LeanObj, a2: LeanObj) u8 {
    return @intFromBool(lean_nat_eq(a1, a2));
}
inline fn lean_uint32_of_nat(a: LeanObj) u32 {
    if (lean_is_scalar(a)) {
        return @as(u32, @intCast(lean_unbox(a)));
    } else {
        return lean_uint32_of_big_nat(a);
    }
}
inline fn lean_uint64_of_nat(a: LeanObj) u64 {
    if (lean_is_scalar(a)) {
        return @as(u64, @intCast(lean_unbox(a)));
    } else {
        return lean_uint64_of_big_nat(a);
    }
}

fn lean_io_result_is_ok(r: LeanObj) bool {
    return lean_obj_tag(r) == @as(c_uint, 0);
}
fn lean_io_result_get_value(r: LeanObj) LeanObj {
    return lean_ctor_get(r, @as(c_uint, 0));
}

// forward declarations
extern fn lean_string_push(arg_v___uniq_1_: LeanObj, arg_v___uniq_2_: u32) callconv(.c) LeanObj;
extern fn lean_get_stdout() callconv(.c) LeanObj;
extern fn l_IO_print___at___00IO_println___at___00main_spec__0_spec__0(arg_v___uniq_1_: LeanObj) callconv(.c) LeanObj;
extern fn l_IO_print___at___00IO_println___at___00main_spec__0_spec__0___boxed(arg_v___uniq_1_: LeanObj, arg_v___uniq_2_: LeanObj) callconv(.c) LeanObj;
extern fn l_IO_println___at___00main_spec__0(arg_v___uniq_1_: LeanObj) callconv(.c) LeanObj;
extern fn l_IO_println___at___00main_spec__0___boxed(arg_v___uniq_1_: LeanObj, arg_v___uniq_2_: LeanObj) callconv(.c) LeanObj;
extern fn l_main___closed__0() callconv(.c) LeanObj;
extern fn _lean_main() callconv(.c) LeanObj;
extern fn l_main___boxed(arg_v___uniq_1_: LeanObj) callconv(.c) LeanObj;

fn l_IO_print___at___00IO_println___at___00main_spec__0_spec__0__def(arg_v___uniq_1_: LeanObj) callconv(.c) LeanObj {
    const v___uniq_1_: LeanObj = arg_v___uniq_1_;

    const v___uniq_3_: LeanObj = lean_get_stdout();
    const v___uniq_4_: LeanObj = lean_ctor_get(v___uniq_3_, @as(c_uint, 4));
    lean_inc_ref(v___uniq_4_);
    lean_dec_ref(v___uniq_3_);
    const v___uniq_5_: LeanObj = lean_apply_2(v___uniq_4_, v___uniq_1_, lean_box(@as(usize, 0)));
    return v___uniq_5_;
}
comptime {
    @export(&l_IO_print___at___00IO_println___at___00main_spec__0_spec__0__def, .{ .name = "l_IO_print___at___00IO_println___at___00main_spec__0_spec__0" });
}

fn l_IO_print___at___00IO_println___at___00main_spec__0_spec__0___boxed__def(arg_v___uniq_1_: LeanObj, arg_v___uniq_2_: LeanObj) callconv(.c) LeanObj {
    const v___uniq_1_: LeanObj = arg_v___uniq_1_;
    _ = arg_v___uniq_2_;

    const v___uniq_3_: LeanObj = l_IO_print___at___00IO_println___at___00main_spec__0_spec__0(v___uniq_1_);
    return v___uniq_3_;
}
comptime {
    @export(&l_IO_print___at___00IO_println___at___00main_spec__0_spec__0___boxed__def, .{ .name = "l_IO_print___at___00IO_println___at___00main_spec__0_spec__0___boxed" });
}

fn l_IO_println___at___00main_spec__0__def(arg_v___uniq_1_: LeanObj) callconv(.c) LeanObj {
    const v___uniq_1_: LeanObj = arg_v___uniq_1_;

    const v___uniq_3_: u32 = @as(u32, 10);
    const v___uniq_4_: LeanObj = lean_string_push(v___uniq_1_, v___uniq_3_);
    const v___uniq_5_: LeanObj = l_IO_print___at___00IO_println___at___00main_spec__0_spec__0(v___uniq_4_);
    return v___uniq_5_;
}
comptime {
    @export(&l_IO_println___at___00main_spec__0__def, .{ .name = "l_IO_println___at___00main_spec__0" });
}

fn l_IO_println___at___00main_spec__0___boxed__def(arg_v___uniq_1_: LeanObj, arg_v___uniq_2_: LeanObj) callconv(.c) LeanObj {
    const v___uniq_1_: LeanObj = arg_v___uniq_1_;
    _ = arg_v___uniq_2_;

    const v___uniq_3_: LeanObj = l_IO_println___at___00main_spec__0(v___uniq_1_);
    return v___uniq_3_;
}
comptime {
    @export(&l_IO_println___at___00main_spec__0___boxed__def, .{ .name = "l_IO_println___at___00main_spec__0___boxed" });
}

fn l_main___closed__0__def() callconv(.c) LeanObj {
    const v___uniq_1_: LeanObj = lean_mk_string_unchecked("hello", @as(usize, 5), @as(usize, 5));
    return v___uniq_1_;
}
comptime {
    @export(&l_main___closed__0__def, .{ .name = "l_main___closed__0" });
}

fn _lean_main__def() callconv(.c) LeanObj {
    const v___uniq_2_: LeanObj = l_main___closed__0();
    const v___uniq_3_: LeanObj = l_IO_println___at___00main_spec__0(v___uniq_2_);
    return v___uniq_3_;
}
comptime {
    @export(&_lean_main__def, .{ .name = "_lean_main" });
}

fn l_main___boxed__def(arg_v___uniq_1_: LeanObj) callconv(.c) LeanObj {
    _ = arg_v___uniq_1_;

    const v___uniq_2_: LeanObj = _lean_main();
    return v___uniq_2_;
}
comptime {
    @export(&l_main___boxed__def, .{ .name = "l_main___boxed" });
}

extern fn initialize_Init(builtin: u8) callconv(.c) LeanObj;

fn initialize_Smoke__def(builtin: u8) callconv(.c) LeanObj {
    lean_initialize_runtime_module();
    lean_initialize_thread();
    _ = initialize_Init(builtin);
    return lean_io_result_mk_ok(lean_box(0));
}
comptime {
    @export(&initialize_Smoke__def, .{ .name = "initialize_Smoke" });
}

fn emitzig_run_main(argc: c_int, argv: [*c][*c]u8) callconv(.c) LeanObj {
    _ = argc;
    _ = argv;
    return _lean_main();
}
pub fn main(argc: c_int, argv0: [*c][*c]u8) callconv(.c) c_int {
    const argv = lean_setup_args(argc, argv0);
    lean_initialize_runtime_module();
    var res: LeanObj = initialize_Smoke__def(@as(u8, 1));
    lean_io_mark_end_initialization();
    if (lean_io_result_is_ok(res)) {
        lean_dec_ref(res);
        lean_init_task_manager();
        res = lean_run_main(emitzig_run_main, argc, argv);
    }
    lean_finalize_task_manager();
    if (lean_io_result_is_ok(res)) {
        const ret: c_int = 0;
        lean_dec_ref(res);
        return ret;
    }
    lean_io_result_show_error(res);
    lean_dec_ref(res);
    return 1;
}
